<resources>
    <string name="app_name">Relative Layout</string>
    <string name="Btn">Button 1</string>
    <string name="Btn_2">Button 2</string>
    <string name="Btn_3">Button 3</string>
    <string name="Btn_4">Button 4</string>
    <string name="Btn_5">Button 5</string>
    <string name="Btn_6">Button 6</string>
    <string name="Btn_7">Button 7</string>
    <string name="Btn_8">Button 8</string>
    <string name="Btn_9">Button 9</string>
    <string name="Btn_10">Button 10</string>
    <string name="Btn_11">Button 11</string>
    <string name="Btn_12">Button 12</string>
    <string name="Btn_13">Button 13</string>
    <string name="Btn_14">Button 14</string>
    <string name="Btn_15">Button 15</string>
</resources>
