<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Btn" />

    <Button
        android:id="@id/Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/Btn_2" />

    <Button
        android:id="@+id/Btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Btn"
        android:text="@string/Btn_3" />

    <Button
        android:id="@+id/Btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Btn"
        android:layout_centerHorizontal="true"
        android:text="@string/Btn_4" />

    <Button
        android:id="@+id/Btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/Btn"
        android:text="@string/Btn_5" />

    <Button
        android:id="@+id/Btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Btn1"
        android:text="@string/Btn_6" />

    <Button
        android:id="@+id/Btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/Btn6"
        android:text="@string/Btn_7" />

    <Button
        android:id="@+id/Btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Btn7"
        android:text="@string/Btn_8" />

    <Button
        android:id="@+id/Btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/Btn7"
        android:text="@string/Btn_9" />

    <Button
        android:id="@+id/Btn10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Btn8"
        android:text="@string/Btn_10" />

    <Button
        android:id="@+id/Btn11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Btn8"
        android:layout_centerHorizontal="true"
        android:text="@string/Btn_11" />

    <Button
        android:id="@+id/Btn12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Btn10"
        android:layout_centerHorizontal="true"
        android:text="@string/Btn_12" />

    <Button
        android:id="@+id/Btn13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Btn12"
        android:text="@string/Btn_13" />

    <Button
        android:id="@+id/Btn14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Btn13"
        android:layout_centerHorizontal="true"
        android:text="@string/Btn_14" />

    <Button
        android:id="@+id/Btn15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/Btn14"
        android:text="@string/Btn_15" />
</RelativeLayout>